# imgscraper

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codecov.yml  pypi-publish.yml  tests.yml  tox.yml  tox_tests.yml
image_scraper/: image_downloader.py  image_scraper.py  models.py  scraper_constructor.py
image_scraper/scrapers/: bs4_scraper.py  scraper.py
image_scraper/src/: core.py  models.py
image_scraper/src/scrapers/: bs4_scraper.py  scraper.py
imgscraper/: __init__.py  scraper_constructor.py
imgscraper/src/: core.py  models.py
imgscraper/src/scrapers/: bs4_scraper.py  scraper.py
tests/: conftest.py
tests/image_scraper/: test_image_downloader.py  test_image_scraper.py  test_models.py  test_scraper_constructor.py
tests/image_scraper/scrapers/: test_bs4_scraper.py
tests/image_scraper/src/: test_core.py  test_image_scraper.py  test_models.py
tests/image_scraper/src/scrapers/: test_bs4_scraper.py
