[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgscraper"
dynamic = ["version"]
description = "Scans web pages for images"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dawid Szaniawski", email = "webluduspl@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "bepatient==0.17.0",
    "requests>=2.28.1",
    "beautifulsoup4~=4.12.3"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Typing :: Typed"
]
keywords = [
    "api",
    "automation",
    "json",
    "web"
]

[project.optional-dependencies]
dev = [
    "black~=23.10.1",
    "flake8~=6.1.0",
    "isort~=5.12.0",
    "mypy~=1.6.1",
    "pylint<=3.0.2",
    "pylint-pytest~=1.1.3",
    "pytest~=7.4.2",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "responses~=0.25.6",
    "ruff~=0.1.2",
    "tox~=4.11.3",
    "twine~=4.0.2"
]

[project.urls]
Source = "https://github.com/dawid-szaniawski/imgscraper"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "imgscraper.__version__"}

[tool.setuptools.packages.find]
include = ["imgscraper*"]
exclude = ["tests*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "--durations=2"
markers = [
    "integtests: Integration tests",
    "unittests: Unit tests"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
src_paths= ["imgscraper", "test"]

[tool.ruff]
line-length = 88

[tool.mypy]
exclude = "venv"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pylint.MASTER]
load-plugins= "pylint_pytest"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "protected-access"
]