[metadata]
name = images_scraper
description = Scans web pages for images.
author = Dawid Szaniawski
author_email=dawidszaniawskiuz@gmail.com
version= 0.3.0
url = https://github.com/dawid-szaniawski/image_scraper
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = image_scraper
install_requires =
    requests>=2.28.1
    beautifulsoup4>=4.11.1
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.3
    pytest-mock>=3.10.0
    pytest-cov>=4.0.0
    black>=22.10.0
    flake8>=5.0.4
    mypy>=0.982
    tox>=3.26.0
    responses>=0.22.0
    freezegun>=1.2.2

[options.package_data]
image_scraper = py.typed


[flake8]
exclude =
    __pycache__
    env
    .env
    venv
    .venv
    .git
max-line-length = 88
extend-ignore = E203

[tool:pytest]
markers =
    integtests: Integration tests
    unittests: Unit tests
addopts = --durations=2
